--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "sensor-dash",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "^12.14.1"
+  },
   "dependencies": {
     "@material-ui/core": "^1.3.1",
     "connected-react-router": "^4.3.0",
